Stable update Done:     - Theme switch disabled         Reason:             - Unexpected flickering         Happens when:             - Refreshing the page when system preference is diferent from the theme chose by the user         Known solution:             - Disable Server Side Rendering (SSR)         Temporary fix:             - Toggle disabled             - Theme controled by the system preferences only         To find another solution later...
Todo:
    - Experience section (about page)
    - Education section (about page)

--- a/src/app/assets/_variables.scss
+++ b/src/app/assets/_variables.scss
@@ -83,12 +83,12 @@ html[data-theme="light"] {
 }
 
 @media (prefers-color-scheme: light) {
-  html[data-theme="light"] {
+  html[data-theme="dark"] {
     .light {
-      display: none;
+      display: block;
     }
     .dark {
-      display: block;
+      display: none;
     }
   }
   .light {
